    - debian/{powernap,powerwake}.manpages: Update accordingly.
    - powernap/monitors: Moved Adam's Monitors.
  * Add new powersave method, using pm-powersave:
    - actions/: Add a set of scripts to reduce power consumption
    - powernap-action: Add tool to enable/disable and list powersave actions.
    - debian/powernap.install: Install new files.

 -- Andres Rodriguez <andreserl@ubuntu.com>  Sun, 09 Jan 2011 18:27:07 -0500

powernap (1.11) unreleased; urgency=low

  [ Adam Sutton ]
  * reworked config file and config file parsing
  * modularized the monitoring to a set of logical plugins
  * added a monitor on a UDP port for staying awake

  [ Nobuto MURATA ]
  * powerwake_completion: add bash completion from $HOME/.cache/ethers,
    LP: #675445
  * debian/powernap.upstart: fix LP: #598241 cannot enable Wake-on-LAN
    when ifconfig output is translated

  [ Dustin Kirkland ]
  * powerwake: test if home dir is writable (might not be, eg: www-data)

 -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 17 Nov 2010 17:15:25 -0600

powernap (1.10-0ubuntu1) maverick; urgency=low

  [ Nobuto MURATA ]
  * debian/powerwake.install, powerwake_completion: add bash completion
    for powerwake, LP: #551073

  [ Dustin Kirkland ]
  * powerwake: create the ~/.cache/ethers file, if it does not already
    exist, LP: #582381

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 18 May 2010 12:33:32 -0500

powernap (1.9-0ubuntu1) lucid; urgency=low

  * debian/powernap.upstart: fix LP: #531950
    - fix ethtool regex
    - allow for admin customized ethtool script, when powernap's
      is incorrect or undesired

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 04 Mar 2010 11:04:49 -0600

powernap (1.8-0ubuntu1) lucid; urgency=low

  * powerwake:
    - test ethers file for writability, LP: #458163
    - since non-priv users cannot write to globally cached ethers, support
      local user eth caches
  * powernap-now, debian/install: