@@ -6,6 +6,19 @@
 # Example:
 #   /etc/init.d/powernap restart
 
+# The ACTION_METHOD variable determines what action to take.
+# The possible actions are:
+# 0 - Best-effort
+# 1 - suspend
+# 2 - hibernate
+# 3 - poweroff
+# 4 - powersave
+# The default mode of operation is Best-effort. First, it will try a user-
+# defined script at /etc/powernap/action, or suspend, hibernate, poweroff
+# The powersave method will use the pm-powersave command and will execute
+# hooks that are locate in /etc/pm/power.d
+ACTION_METHOD = 0
+
 # The MONITORED_PROCESSES variable should be a Python list of quoted regular
 # expressions.
 # Each item in this list will be compared against the output of "ps -eo args".
