@@ -10,6 +10,7 @@
 #    Copyright (C) 2009 Canonical Ltd.
 #
 #    Authors: Dustin Kirkland <kirkland@canonical.com>
+#             Andres Rodriguez <andreserl@ubuntu.com>
 #
 #    This program is free software: you can redistribute it and/or modify
 #    it under the terms of the GNU General Public License as published by
@@ -28,12 +29,32 @@ PKG="powernap"
 
 # Use the specified action, if configured
 # Otherwise, use the best available, supported sleep state
-if [ -x "/etc/$PKG/action" ]; then
-	exec /etc/$PKG/action
-elif pm-is-supported --suspend; then
-	exec /usr/sbin/pm-suspend
-elif pm-is-supported --hibernate; then
-	exec /usr/sbin/pm-hibernate
-else
-	exec /sbin/poweroff
-fi
+best_effort() {
+	if [ -x "/etc/$PKG/action" ]; then
+		exec /etc/$PKG/action
+	elif pm-is-supported --suspend; then
+		exec /usr/sbin/pm-suspend
+	elif pm-is-supported --hibernate; then
+		exec /usr/sbin/pm-hibernate
+	else
+		exec /sbin/poweroff
+	fi
+}
+
+case $ACTION_METHOD in
+	0)
+		best_effort
+		exit ;;
+	1)
+		exec /usr/sbin/pm-suspend
+		exit ;;
+	2)
+		exec /usr/sbin/pm-hibernate
+		exit ;;
+	3)
+		exec /sbin/poweroff
+		exit ;;
+	4)
+		exec /usr/sbin/pm-powersave true
+		exit ;;
+esac
