@@ -26,6 +26,8 @@ import re
 import signal
 import sys
 import time
+import socket, traceback
+import struct
 
 # Define globals
 global PKG, LOCK, CONFIG
@@ -37,17 +39,19 @@ LOG = "/var/log/%s.log" % PKG
 logging.basicConfig(filename=LOG, format='%(asctime)s %(levelname)-8s %(message)s', datefmt='%Y-%m-%d_%H:%M:%S', level=logging.DEBUG,)
 
 # CONFIG values can override these
-global MONITORED_PROCESSES, ABSENT_SECONDS, ACTION, INTERVAL_SECONDS, GRACE_SECONDS, DEBUG
+global MONITORED_PROCESSES, ABSENT_SECONDS, ACTION, INTERVAL_SECONDS, GRACE_SECONDS, DEBUG, ACTION_METHOD
 MONITORED_PROCESSES = []
 ABSENT_SECONDS = sys.maxint
 ACTION = "/usr/sbin/powernap"
 INTERVAL_SECONDS = 1
 GRACE_SECONDS = 60
 DEBUG = 0
+ACTION_METHOD = 0
 
 # Load configuration file
 try:
     execfile(CONFIG)
+    os.putenv("ACTION_METHOD", str(ACTION_METHOD))
 except:
     # No error function yet, use a raw print
     print("Invalid configuration [%s]" % CONFIG)
@@ -165,6 +169,13 @@ def warn_users():
 def notify_authorities():
     debug(logging.WARNING, "Taking action [%s]" % ACTION)
 
+# Recover action for ACTION_METHOD=4 (pm-powersave).
+# TODO-andreserl: Find a better way to do this. Maybe involving ACTION variable and passing a false?
+def take_recover_action():
+    recover = "/usr/sbin/pm-powersave false"
+    debug(logging.DEBUG, "Taking recover action [%s]" % recover)
+    os.system(recover)
+
 # Zero the counters and take the action
 def take_action():
     notify_authorities()
@@ -177,6 +188,64 @@ def take_action():
 def take_action_handler(signal, frame):
     take_action()
 
+# Obtain MAC address from Monitor Interface
+def obtain_mac_address(iface):
+    file = "/sys/class/net/%s/address" % iface
+    f = open(file, 'r')
+    iface = f.read()
+    f.close
+    return iface.strip()
+
+# Verify that MAC address is correct (taken from powerwake)
+def is_mac(mac):
+    r1 = re.compile('^[0-9a-fA-F]{12}$')
+    r2 = re.compile('^[0-9a-fA-F]{2}.[0-9a-fA-F]{2}.[0-9a-fA-F]{2}.[0-9a-fA-F]{2}.[0-9a-fA-F]{2}.[0-9a-fA-F]{2}$')
+    if r1.match(mac) or r2.match(mac):
+        return 1
+    else:
+        return 0
+
+# Generate WoL data for local interface to compare with received packet (Partially taken from powerwake)
+def get_local_wol_data(mac):
+    nonhex = re.compile('[^0-9a-fA-F]')
+    mac = nonhex.sub('', mac)
+    if len(mac) != 12:
+        error("Malformed mac address [%s]" % mac)
+    data = ''.join(['FFFFFFFFFFFF', mac * 20])
+    wol_data = ''
+    for i in range(0, len(data), 2):
+        wol_data = ''.join([wol_data, struct.pack('B', int(data[i: i + 2], 16))])
+    return wol_data
+
+# WoL Monitor
+def start_wol_monitor():
+    host = '' # Bind to all interfaces
+    port = 7
+    iface = 'eth0' # TODO-andreserl - Provide ability to configure which interface will be used as Wakeup WoL Monitor
+    mac = obtain_mac_address(iface)
+    #isMac = is_mac(mac)
+    local_wol_data = get_local_wol_data(mac)
+
+    # Prepare the socket and bind port
+    s = socket.socket(socket.AF_INET, socket.SOCK_DGRAM)
+    s.bind((host, port))
+
+    while 1:
+        try:
+            debug(logging.DEBUG, "    WoL monitor started at port [%s]" % port)
+            recv_wol_msg, address = s.recvfrom(1024)
+            debug(logging.DEBUG, "    WoL packet received from %s" % address[0])
+            # Compares if received WoL data matches the WoL data for the local interface
+            if recv_wol_msg == local_wol_data:
+                debug(logging.DEBUG, "    WoL data matches local interface [%s]" % iface)
+                break
+            # Acknowledge it.
+            #s.sendto("I am here", address)
+        except (KeyboardInterrupt, SystemExit):
+            raise
+        except:
+            traceback.print_exc()
+
 # Main loop, search process table, increment counters, take actions, sleep
 def powernapd_loop():
     last_i = 0
@@ -187,6 +256,7 @@ def powernapd_loop():
         debug(logging.DEBUG, "Examining process table")
         absent_processes = 0
         ps = commands.getoutput("ps -eo args").splitlines()
+        #TODO - TODO: This for is the "ProcessMonitor"
         for p in PROCESSES:
             debug(logging.DEBUG, "  Looking for [%s]" % p.process)
             if find_process(ps, p.regex):
@@ -210,6 +280,16 @@ def powernapd_loop():
                 # All processes are absent, take action!
                 if warn_users() == 0:
                     take_action()
+                    # Starts WoL Monitor if ACTION_METHOD is set to powersave. Waits here until a matching WoL packet is received
+                    # This monitor will only work when entering on 'pm-powersave', and will only wakeup when a matching WoL packet
+                    # for the default interface is received
+                    # TODO - provide method to define default interface
+                    if ACTION_METHOD == 4:
+                        debug(logging.DEBUG, "Starting WoL monitor")
+                        # Start WoL Monitor. Returns when WoL packet has been received
+                        start_wol_monitor()
+                        # Takes recover action for ACTION_METHOD = 4, when returning from WoL Monitor
+                        take_recover_action()
             else:
                 last_i = i
                 debug(logging.DEBUG, "    There appears to be activity on [%s] within the last [%d] seconds" % (d, ABSENT_SECONDS))
